--- a/css/style.css
+++ b/css/style.css
@@ -1,200 +1,237 @@
-    h1 {
-    color: #1A0752;
-    font-size: 60px;
-    }
+h1 {
+  color: #1A0752;
+  font-size: 60px;
+}
 
-    h2, h3, h4, h5, p, form, ul {
-    color: #1B1B17;
-    }
+h2, h3, h4, h5, p, form, ul {
+  color: #1B1B17;
+}
 
-    h2, h1, h3, p {
-    margin: 10px;
-    padding: 5px;
-    }
+h2, h1, h3, p {
+  margin: 10px;
+  padding: 5px;
+}
 
-    body {
-    background-color: #BDBAE3;
-    font-family: "Arial", sans-serif;
-    margin: 0;
-    padding: 0;
-    }
+body {
+  background-color: #BDBAE3;
+  font-family: "Arial", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-    header {
-    background-color: #333;
-    padding: 10px;
-    }
-    header nav ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    justify-content: flex-end;
-    gap: 25px;
-    }
-    header nav ul li a {
-    color: #1B1B17;
-    text-decoration: none;
-    font-weight: bold;
-    }
+.container {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 1fr;
+  min-height: 100vh;
+}
 
-    .subtitulo {
-    color: #1A0752;
-    font-size: 20px;
-    font-style: italic;
-    }
+.main-content {
+  padding: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  align-items: start;
+}
+.main-content h1, .main-content h2, .main-content h3 {
+  grid-column: span 2;
+}
 
-    a button {
-    margin-bottom: 20px;
-    }
+footer {
+  background-color: #8680FF;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+footer ul li {
+  display: inline;
+  margin: 10px;
+}
 
-    button {
-    background-color: white !important;
-    color: #1A0752 !important;
-    padding: 15px;
-    border: none !important;
-    border-radius: 3px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: background-color 0.3s, transform 0.3s;
-    display: block;
-    margin: auto;
-    }
-    button:hover {
-    background-color: #819B94 !important;
-    transform: scale(1.1) !important;
-    }
+.caja-bloque {
+  background-color: #f0f0f0;
+  padding: 20px;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  margin: 20px;
+}
 
-    .container {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    grid-template-columns: 1fr;
-    min-height: 100vh;
-    }
+.slider-container {
+  width: 100%;
+  overflow: hidden;
+}
+.slider-container .slider {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+.slider-container .slider .slide img {
+  width: 100%;
+  height: auto;
+}
+.slider-container .slider .slide h3 {
+  margin-top: 10px;
+  color: #333;
+}
 
-    .main-content {
-    padding: 40px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    align-items: start;
-    }
-    .main-content h1, .main-content h2, .main-content h3 {
-    grid-column: span 2;
-    }
+.contenedor {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+.contenedor .caja-mision, .contenedor .caja-vision {
+  flex: 1;
+  margin: 10px;
+  padding: 5px;
+  background-color: #8680FF;
+  border-radius: 5px;
+}
+.contenedor .caja-mision h2, .contenedor .caja-vision h2 {
+  text-align: center;
+  color: #333;
+}
 
-    footer {
-    background-color: #8680FF;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-    }
-    footer ul {
-    list-style: none;
-    padding: 0;
-    }
-    footer ul li {
-    display: inline;
-    margin: 10px;
-    }
+.contenedor-centrado {
+  text-align: center;
+  margin: 20px;
+}
 
-    .caja-bloque {
-    background-color: #f0f0f0;
-    padding: 20px;
-    border: 1px solid #ccc;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
-    margin: 20px;
-    }
+.map-container {
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
 
-    .slider-container {
-    width: 100%;
-    overflow: hidden;
-    }
-    .slider-container .slider {
-    display: flex;
-    transition: transform 0.5s ease;
-    }
-    .slider-container .slider .slide img {
-    width: 100%;
-    height: auto;
-    }
-    .slider-container .slider .slide h3 {
-    margin-top: 10px;
-    color: #333;
-    }
+.navbar-brand img {
+  width: 50px;
+  height: auto;
+}
 
-    .contenedor {
-    display: flex;
-    justify-content: space-between;
-    margin: 10px;
-    }
-    .contenedor .caja-mision, .contenedor .caja-vision {
-    flex: 1;
-    margin: 10px;
-    padding: 5px;
-    background-color: #8680FF;
-    border-radius: 5px;
-    }
-    .contenedor .caja-mision h2, .contenedor .caja-vision h2 {
-    text-align: center;
-    color: #333;
-    }
+.slider-container {
+  width: 100%;
+  max-width: 1400px;
+  animation: change-color 5s linear infinite;
+  margin-bottom: 50px;
+}
 
-    .contenedor-centrado {
-    text-align: center;
-    margin: 20px;
-    }
+@keyframes change-color {
+  0% {
+    background: #819B94;
+  }
+  50% {
+    background: #8680FF;
+  }
+  100% {
+    background: #1A0752;
+  }
+}
+a button {
+  margin-bottom: 20px;
+}
 
-    .caja-formulario {
-    background-color: #BDBAE3;
-    border-radius: 3px;
-    padding: 15px;
-    max-width: 450px;
-    margin: 10px auto;
-    }
-    .caja-formulario h2 {
-    text-align: center;
-    color: #333;
-    }
-    .caja-formulario input, .caja-formulario textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    }
-    .caja-formulario #enviar-container {
-    text-align: center;
-    }
-    .caja-formulario button {
-    padding: 15px;
-    border: none;
-    background-color: white;
-    color: #1A0752;
-    border-radius: 3px;
-    cursor: pointer;
-    font-size: 14px;
-    }
-    .caja-formulario button:hover {
-    background-color: #819B94;
-    }
+button {
+  background-color: white !important;
+  color: #1A0752 !important;
+  padding: 15px;
+  border: none !important;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s, transform 0.3s;
+  display: block;
+  margin: auto;
+}
+button:hover {
+  background-color: #819B94 !important;
+  transform: scale(1.1) !important;
+}
 
-    .map-container {
-    margin-bottom: 20px;
-    margin-left: 20px;
-    }
+header {
+  background-color: #333;
+  padding: 10px;
+}
+header nav ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  justify-content: flex-end;
+  gap: 25px;
+}
+header nav ul li a {
+  color: #1B1B17;
+  text-decoration: none;
+  font-weight: bold;
+}
 
-    .navbar-brand img {
-    width: 50px;
-    height: auto;
-    }
+.subtitulo {
+  color: #1A0752;
+  font-size: 20px;
+  font-style: italic;
+}
 
-    #carouselExampleCaptions {
-    width: 60%;
-    height: auto;
-    display: block;
-    margin: auto;
-    }
+#carouselExampleCaptions {
+  width: 60%;
+  height: auto;
+  display: block;
+  margin: auto;
+}
 
-    /*# sourceMappingURL=style.css.map */
+.caja-formulario {
+  background-color: #BDBAE3;
+  border-radius: 3px;
+  padding: 15px;
+  max-width: 450px;
+  margin: 10px auto;
+}
+.caja-formulario h2 {
+  text-align: center;
+  color: #333;
+}
+.caja-formulario input, .caja-formulario textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+.caja-formulario #enviar-container {
+  text-align: center;
+}
+.caja-formulario button {
+  padding: 15px;
+  border: none;
+  background-color: white;
+  color: #1A0752;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 14px;
+}
+.caja-formulario button:hover {
+  background-color: #819B94;
+}
+
+.slider-container {
+  width: 100%;
+  max-width: 1400px;
+  animation: change-color 5s linear infinite;
+  margin-bottom: 50px;
+}
+
+@keyframes change-color {
+  0% {
+    background: #819B94;
+  }
+  50% {
+    background: #8680FF;
+  }
+  100% {
+    background: #1A0752;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
