artículos de  sección de servicios en una única columna y a la versión mobile le di mas tamaño a mi carrouse

--- a/css/style.css
+++ b/css/style.css
@@ -174,12 +174,22 @@ header nav ul li a {
   font-style: italic;
 }
 
+
 #carouselExampleCaptions {
   width: 60%;
   height: auto;
   display: block;
   margin: auto;
 }
+
+/* Ajuste para pantallas más pequeñas */
+@media (max-width: 768px) {
+  #carouselExampleCaptions {
+    width: 100%; 
+    height: auto; 
+  }
+}
+
 
 .caja-formulario {
   background-color: #BDBAE3;
